custom/ghost/ingress.yaml
# helm upgrade --install ingress-nginx ingress-nginx/ingress-nginx --namespace ingress-nginx --create-namespace -f custom/ghost/nginx.yaml
# kubectl apply -f custom/ghost/ingress.yaml -n example
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-com
  labels:
    app: example-com
    app.kubernetes.io/name: example-com
    app.kubernetes.io/instance: example-com
    release: example-com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "example.com"
    secretName: example-com
  rules:
  - host: "example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ghost
            port:
              number: 80
